agic/ratings-web-ingress-agic.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ratings-web-ingress-agic
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: ratings-web
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
